tools/crates/vendor/toml_edit/tests/fixtures/invalid/key/without-value-3.stderr
TOML parse error at line 1, column 6
  |
1 | "key"
  |      ^
expected `.`, `=`
